--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-social-icons": "^5.4.1",
+    "react-typewriter-hook": "^1.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
