added CNAME file for custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gusbikos.github.io/portfolio/",
+  "homepage": "http://www.gus-bikos.com/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
